# jaguar

./: README.md
drrobot_player_driver3/: CMakeLists.txt  READAME.md  drrobotplayer.yaml  jaguar.launch  package.xml
drrobot_player_driver3/include/: DrRobotMotionSensorDriver.hpp
drrobot_player_driver3/src/: DrRobotMotionSensorDriver.cpp  drrobot_player.cpp
jaguar_2dnav/: CMakeLists.txt  package.xml
jaguar_2dnav/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
jaguar_2dnav/launch/: frontier_exploration.launch  hector_slam.launch  jaguar_nav.launch
jaguar_teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
jaguar_teleop/launch/: jaguar_teleop.launch  jaguar_teleop.launch~
jaguar_teleop/src/: jaguar_teleop_node.cpp
mixed_initiative_controller/src/: mixed_initiative_controller_node.cpp
odom_from_pose/: CMakeLists.txt  package.xml
odom_from_pose/src/: odom_from_pose_node.cpp  odom_from_pose_node.cpp.autosave
